Adding Mobile Screen for Investments Page

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/df0405a8db.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <main>
+    <main class='ivestments-app'>
       <div class='main-title'>
         <h1>INVESTMENT APPLICATION</h1>
       </div>
